# PhotoAlbum

./: .gitattributes  .gitignore  BUILDING.md  LICENSE  PhotoAlbum.slnx  README.md
.github/workflows/: build.yml
Design/: Designplan.md
installer/: .gitignore  PhotoAlbum-Setup.exe.sha256  README.md  assemble.bat  assemble.ps1
rust/photoalbum_core/: Cargo.toml  build-release.cmd
rust/photoalbum_core/crates/copy_engine/: Cargo.toml
rust/photoalbum_core/crates/copy_engine/src/: lib.rs
rust/photoalbum_core/crates/dedup/: Cargo.toml
rust/photoalbum_core/crates/dedup/src/: lib.rs
rust/photoalbum_core/crates/ffi/: Cargo.toml
rust/photoalbum_core/crates/ffi/src/: lib.rs
rust/photoalbum_core/crates/hasher/: Cargo.toml
rust/photoalbum_core/crates/hasher/benches/: hash_bench.rs
rust/photoalbum_core/crates/hasher/src/: lib.rs
rust/photoalbum_core/crates/scanner/: Cargo.toml
rust/photoalbum_core/crates/scanner/benches/: scan_bench.rs
rust/photoalbum_core/crates/scanner/src/: lib.rs
rust/photoalbum_core/crates/thumbnailer/: Cargo.toml
rust/photoalbum_core/crates/thumbnailer/benches/: thumb_bench.rs
rust/photoalbum_core/crates/thumbnailer/src/: lib.rs
rust/photoalbum_core/crates/verifier/: Cargo.toml
rust/photoalbum_core/crates/verifier/src/: lib.rs
src/PhotoAlbum.Api/: LocalApiHost.cs  PhotoAlbum.Api.csproj
src/PhotoAlbum.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PhotoAlbum.App.csproj
src/PhotoAlbum.Core/: PhotoAlbum.Core.csproj
src/PhotoAlbum.Data/: DatabaseContext.cs  PhotoAlbum.Data.csproj
(+111 files in other folders)
