[workspace]
members = [
    "crates/ffi",
    "crates/scanner",
    "crates/hasher",
    "crates/thumbnailer",
    "crates/copy_engine",
    "crates/verifier",
    "crates/dedup",
]
resolver = "2"

[workspace.dependencies]
blake3      = "1"
walkdir     = "2"
image       = { version = "0.25", default-features = false, features = ["jpeg","png","gif","webp"] }
rayon       = "1"
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
criterion   = { version = "0.5", features = ["html_reports"] }
tempfile    = "3"
