[package]
name    = "ffi"
version = "0.1.0"
edition = "2021"

[lib]
name       = "photoalbum_core"
crate-type = ["cdylib"]

[dependencies]
scanner     = { path = "../scanner" }
hasher      = { path = "../hasher" }
thumbnailer = { path = "../thumbnailer" }
copy_engine = { path = "../copy_engine" }
verifier    = { path = "../verifier" }
dedup       = { path = "../dedup" }
