[package]
name    = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir   = { workspace = true }
thiserror = { workspace = true }
rayon     = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile  = { workspace = true }

[[bench]]
name    = "scan_bench"
harness = false
